# red-o-lator

./: README.md
.github/workflows/: cmake.yml
debugger/: CMakeLists.txt
driver/: CMakeLists.txt
driver/src/common/: common.hpp
driver/src/runtime/: icd.h  runtime-device.cpp  runtime-platform.cpp
driver/src/runtime/common/: runtime-commons.h
driver/src/runtime/device/: DeviceConfigurationParser.cpp
driver/src/runtime/icd/: CLProgram.hpp
emulator/: CMakeLists.txt  trash.txt
emulator/alu/: alu.h  alu_sop1.cpp  scalar_alu.cpp
emulator/flow/: compute_unit.h  scheduler.h  wavefront.cpp  wavefront.h
emulator/instr/: instruction.cpp  instruction.h  operand.cpp  operand.h
emulator/instr_set/: instruction.h
emulator/main/: KernelLoader.cpp
emulator/reg/: register.cpp  register.h  register_type.h  status_register.cpp
emulator/util/: util.cpp  util.h
